@@ -74,20 +74,22 @@ configurations {
 gradlePlugin.testSourceSets(sourceSets.functionalTest)
 configurations.functionalTestImplementation.extendsFrom(configurations.testImplementation)
 
+def graalVmHomeProvider = providers.environmentVariable("GRAALVM_HOME")
+def isGraalVmDevBuild = providers.environmentVariable("IS_GRAALVM_DEV_BUILD")
 def graalVm = javaToolchains.launcherFor {
-    languageVersion.set(JavaLanguageVersion.of(11))
-    vendor.set(JvmVendorSpec.matching("GraalVM"))
+    languageVersion.set(JavaLanguageVersion.of(17))
+//    vendor.set(JvmVendorSpec.matching("Oracle Corporation"))
 }
 
 def fullFunctionalTest = tasks.register("fullFunctionalTest")
 
 ['functionalTest', 'configCacheFunctionalTest'].each { baseName ->
-    ["current", "7.3.3", "7.2", "7.1", "6.8.3", "6.7.1"].each { gradleVersion ->
+    ["current", "7.4", "7.6.2", "8.0.1", "8.2.1"].each { gradleVersion ->
         String taskName = gradleVersion == 'current' ? baseName : "gradle${gradleVersion}${baseName.capitalize()}"
         // Add a task to run the functional tests
         def testTask = tasks.register(taskName, Test) {
             String effectiveVersion = gradleVersion
-            def versionProvider = providers.systemProperty('gradleVersion').forUseAtConfigurationTime()
+            def versionProvider = providers.systemProperty('gradleVersion')
             if (effectiveVersion == 'current' && versionProvider.isPresent()) {
                 effectiveVersion = versionProvider.get()
             }
@@ -99,12 +101,30 @@ def fullFunctionalTest = tasks.register("fullFunctionalTest")
             systemProperty('common.repo.url', configurations.functionalTestCommonRepository.incoming.files.files[0])
             systemProperty('gradle.test.version', effectiveVersion)
             systemProperty('versions.junit', libs.versions.junitJupiter.get())
-            environment('GRAALVM_HOME', graalVm.forUseAtConfigurationTime().get().metadata.installationPath.asFile.absolutePath)
+            environment('GRAALVM_HOME', graalVmHomeProvider.
+                    orElse(providers.provider(() -> graalVm.get().metadata.installationPath.asFile.absolutePath))
+                    .map {
+                        println("Test task $taskName will use GRAALVM_HOME = $it")
+                        it
+                    }
+                    .get()
+            )
+            if (isGraalVmDevBuild.isPresent()) {
+                environment('IS_GRAALVM_DEV_BUILD', 'true')
+            }
             testClassesDirs = sourceSets.functionalTest.output.classesDirs
             classpath = sourceSets.functionalTest.runtimeClasspath
             javaLauncher.set(graalVm)
             if (baseName == 'configCacheFunctionalTest') {
                 systemProperty('config.cache', 'true')
+                // These args are required so that we can debug tests which
+                // run with the configuration cache, see https://github.com/gradle/gradle/issues/25898
+                jvmArgs = [
+                        '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                        '--add-opens=java.base/java.util=ALL-UNNAMED',
+                        '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
+                        '--add-opens=java.base/java.net=ALL-UNNAMED',
+                ]
             }
         }
         fullFunctionalTest.configure {
